# Mesh-processing-toolkit

./: .gitignore  CMakeLists.txt  readme.md  readme.txt
face2faceindex/: CMakeLists.txt  face2faceindex.cpp  face2faceindex.h  main.cpp  readme.txt
faceindex2directededge/: CMakeLists.txt  faceindex2directededge.cpp  faceindex2directededge.h  main.cpp  readme.txt
handout_models/: 2ballout.face  2torus.face  5bout.face  747.face  Hamish.diredge  Hamish.face  biplane.face  bitorus.face  cherrytree.face  cow.face  cube.face  cube1.diredge  dodecahedron.face  fuelinject.face  hamish_40k_edit.tri  hexahedron.face  horse.face  icosahedron.diredge  icosahedron.face  icosahedron.tri  legoman.diredge  legoman.face  many.face  octahedron.face  quadtorus.face  skeleton.face  test.tri  tetrahedron.diredge  tetrahedron.face  tetrahedron_bad.face  tetrahedronpinch.face  tetrahedronpinch.tri  torus.face  tritorus.face  yoda.face
manifoldtesting/: CMakeLists.txt  main.cpp  manifold_test_results.txt  manifoldtesting.cpp  manifoldtesting.h  readme.txt  testAll.bash
meshrepair/: CMakeLists.txt  main.cpp  readme.txt
simplification/: CMakeLists.txt  main.cpp  readme.txt
src/: DirectedEdge.cpp  DirectedEdge.h  FaceIndex.cpp  FaceIndex.h  ManifoldTester.cpp  ManifoldTester.h  MeshRepair.cpp  MeshRepair.h  Simplification.cpp  Simplification.h  TriangleIntersectionRendering.cpp  TriangleIntersectionRendering.h  directededge.cpp  directededge.h  faceindex.cpp  faceindex.h
triangle_renderer/: Cartesian3.cpp  Cartesian3.h  GeometricWidget.cpp  Makefile  moc_GeometricWidget.cpp  moc_predefs.h  readme.txt
utilities/: CMakeLists.txt  edge.h  face.cpp  face.h  progressBar.cpp  progressBar.h  vertex.cpp  vertex.h
