cmake_minimum_required(VERSION 3.10)

# Set the project name
project(modellingcwk1)



# Add subdirectories for each executable
add_subdirectory(utilities)
add_subdirectory(face2faceindex)
add_subdirectory(faceindex2directededge)
add_subdirectory(manifoldtesting)
add_subdirectory(meshrepair)
add_subdirectory(simplification)